[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/DynamicFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Script/pauseWindow.gd" type="Script" id=2]
[ext_resource path="res://Font/DynamicFontLarge.tres" type="DynamicFont" id=3]
[ext_resource path="res://Style/ButtonBlue.tres" type="StyleBox" id=4]
[ext_resource path="res://Style/ButtonBlueDark.tres" type="StyleBox" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Control" type="Popup"]
pause_mode = 2
anchor_right = 0.889
anchor_bottom = 0.219
margin_right = -0.0800171
margin_bottom = -0.320007
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.368627, 0.521569, 0.619608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 27.0
grow_horizontal = 0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_right = 640.0
margin_bottom = 307.0
custom_constants/separation = 80

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 89.0
custom_styles/panel = SubResource( 2 )

[node name="TextPause" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer"]
margin_right = 640.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 3 )
text = "Pause"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 640.0
margin_bottom = 269.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 620.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 70 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kembali" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 180.0
margin_bottom = 70.0
rect_min_size = Vector2( 180, 0 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="KembaliText" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Kembali"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Lanjut"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ulang" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 210.0
margin_right = 390.0
margin_bottom = 70.0
rect_min_size = Vector2( 180, 0 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="UlangText" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Ulang"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Ulang"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 420.0
margin_right = 600.0
margin_bottom = 70.0
rect_min_size = Vector2( 180, 0 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="MenuText" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "Menu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Kembali" to="." method="_on_Kembali_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Ulang" to="." method="_on_Ulang_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/Menu" to="." method="_on_Menu_pressed"]
